samples/_failures_safe/1761534724_366d2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e8fbcc0.c: In function ‘main’:
./samples/SAFE/__tmp_7e8fbcc0.c:159:21: error: ‘add_mat’ undeclared (first use in this function)
  159 |                 if (add_mat
      |                     ^~~~~~~
./samples/SAFE/__tmp_7e8fbcc0.c:159:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7e8fbcc0.c:159:28: error: expected ‘)’ at end of input
  159 |                 if (add_mat
      |                    ~       ^
      |                            )
./samples/SAFE/__tmp_7e8fbcc0.c:159:17: error: expected declaration or statement at end of input
  159 |                 if (add_mat
      |                 ^~
./samples/SAFE/__tmp_7e8fbcc0.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e8fbcc0.c:159:17: error: expected declaration or statement at end of input
